[tool.poetry]
name = "emmett-sentry"
version = "0.4.1"
description = "Sentry extension for Emmett framework"
authors = ["Giovanni Barillari <g@baro.dev>"]
license = "BSD-3-Clause"

readme = "README.md"
homepage = "https://github.com/emmett-framework/sentry"
repository = "https://github.com/emmett-framework/sentry"

keywords = ["sentry", "logging", "emmett"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
emmett = "^2.5.0"
sentry-sdk = "^1.20.0"

[tool.poetry.dev-dependencies]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/emmett-framework/sentry/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
